syntax = "proto3";

package protos;

option go_package = "/;protos";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service PostService {
    rpc CreatePost (CreatePostRequest) returns (Post) {}
    rpc UpdatePost (UpdatePostRequest) returns (Post) {}
    rpc DeletePost (DeletePostRequest) returns (google.protobuf.Empty) {}
    rpc GetPost (GetPostRequest) returns (Post) {}
    rpc GetPosts (GetPostsRequest) returns (Posts) {}
}

message CreatePostRequest {
    uint64 userID = 1;
    string content = 2;
}

message UpdatePostRequest {
    uint64 postID = 1;
    uint64 userID = 2;
    string content = 3;
}

message GetPostsRequest {
    uint64 userID = 1;
    uint32 page = 2;
    uint32 pageSize = 3;
}

message GetPostRequest {
    uint64 postID = 1;
}

message DeletePostRequest {
    uint64 postID = 1;
    uint64 userID = 2;
}

message Post {
    uint64 postID = 1;
    uint64 userID = 2;
    string content = 3;
    google.protobuf.Timestamp createdAt = 4;
}

message Posts {
    repeated Post posts = 1;
}
